--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dependencies = [
     "openai>=1.66.3",
     "litellm>=1.63.8",
     "python-dotenv>=1.0.1",
-    
     # Web and API related
     "flask-login>=0.6.3",
     "flask-wtf>=1.2.2",
@@ -19,10 +18,12 @@ dependencies = [
     "requests-oauthlib>=2.0.0",
     "aiohttp>=3.8.0",
     "websockets>=12.0",
-    
     # Utilities
     "trafilatura>=2.0.0",
     "twilio>=9.4.1",
+    "pytest>=8.3.5",
+    "selenium>=4.29.0",
+    "pytest-asyncio>=0.25.3",
 ]
 
 [build-system]
