--- a/.gitignore
+++ b/.gitignore
@@ -10,22 +10,57 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# C extensions
+*.so
+
 # Distribution / packaging
 dist/
 build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
 *.egg-info/
+.installed.cfg
+*.egg
 
-# Virtual environment
-.venv/
+# Virtual environments
 venv/
 env/
+ENV/
+.venv
 
 # IDE
 .idea/
 .vscode/
+*.swp
+*.swo
+
+# Local development settings
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Logs
+logs/
 *.log
 
-# VSCode
-*.code-workspace
+# Local database files
+*.db
+*.sqlite3
