--- a/.github/workflows/main_digital-being.yml
+++ b/.github/workflows/main_digital-being.yml
@@ -2,7 +2,7 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy container to Azure
+name: Build and deploy container app to Azure Web App - digital-being
 
 on:
   push:
@@ -31,22 +31,23 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
         
-    - name: Log in to ACR
+    - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
         login-server: ${{ env.REGISTRY }}
-        username: ${{ secrets.ACR_USERNAME }}
-        password: ${{ secrets.ACR_PASSWORD }}
+        username: ${{ secrets.REGISTRY_USERNAME }}
+        password: ${{ secrets.REGISTRY_PASSWORD }}
     
-    - name: Build and push
+    - name: Build and push container image to registry
       uses: docker/build-push-action@v4
       with:
+        push: true
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+        file: ./Dockerfile
         context: .
         platforms: linux/amd64
-        push: true
-        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-        
-    - name: Deploy to Azure App Service
+    
+    - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.APP_NAME }}
