--- a/.github/workflows/main_digital-being.yml
+++ b/.github/workflows/main_digital-being.yml
@@ -34,8 +34,8 @@ jobs:
     - name: Log in to Azure Container Registry
       uses: azure/docker-login@v1
       with:
-        login-server: ${{ env.REGISTRY }}
-        username: ${{ secrets.REGISTRY_USERNAME }}
+        login-server: givecareregistry.azurecr.io
+        username: givecareregistry
         password: ${{ secrets.REGISTRY_PASSWORD }}
     
     - name: Build and push container image to registry
